# rust-llkv

./: .gitignore  AGENTS.md  API_REFACTOR_OPPORTUNITIES.md  BUILD-PROFILE.md  CONSTRAINT_PLAN.md  Cargo.toml  DELETEME.md  DUPLICATION-AUDIT-REPORT.md  PROFILE-IDEAS.md  README.md  RUNTIME-SIMPLIFICATION-PLAN-OUTLINE.md  STACK-FLATTENING-PLAN.md  dss.sql  test_debug.rs  udeps.toml
llkv/: Cargo.toml  README.md
llkv-aggregate/: Cargo.toml  README.md
llkv-aggregate/src/: lib.rs  stream.rs
llkv-aggregate/tests/: avg_decimal_test.rs
llkv-arrowhead/: Cargo.toml  README.md
llkv-arrowhead/benches/: olap_bench.rs
llkv-arrowhead/src/: lib.rs
llkv-arrowhead/tests/: arrow_fetch_tests.rs  arrow_ingest_test.rs  arrow_ingest_tests.rs
llkv-btree/: .gitignore  Cargo.toml  ITER-STRENGTHS-AND-WEAKNESSES.md  README.md
llkv-btree/benches/: large_scale_benchmark.rs  unique_values_benchmark.rs
llkv-btree/examples/: concurrent_reads.rs  debug_metrics.rs  frame_predicate.rs  paginate.rs  skips_and_calcs.rs  visualize.rs
llkv-btree/src/: errors.rs  iter.rs  lib.rs  node_cache.rs  types.rs
llkv-btree/tests/: btree_ops_tests.rs  common.rs  graphviz_snapshots.rs  graphviz_sync_tests.rs  pager_sync_tests.rs  scan_iter_tests.rs
llkv-column-map/: .gitignore  Cargo.toml  GC-DRAFT.md  README.md  storage_layout.dot
llkv-column-map/benches/: column_map_bench.rs  column_sum_bench.rs  columnar_bench.rs  columnar_store_bench.rs  gather_rows_bench.rs  indexing_bench.rs  ingest_bench.rs  injest_bench.rs  old.indexing_bench.rs  random_probe_bench.rs  read_bench.rs  scan_builder_bench.rs  scan_rowid_bench.rs  segment_scan_bench.rs  sort_index_bench.rs  visitor_dispatch_bench.rs
llkv-column-map/drafts/: AGG-RANGE-PERF-DRAFT.md  GRU-DRAFT.md  LEXSORT-INDICES-DRAFT.md  LLKV-ARROWHEAD.md  MIRI-CORRECTNESS-DRAFT.md  PER-SEGMENT-VALUE-ORDERING-DRAFT.md  PROFILING-DRAFT.md  RANGE-SCAN-PERF-DRAFT.md
llkv-column-map/examples/: benchmark_breakdown.rs  chunk_analysis.rs  chunk_size_perf.rs  metrics_overview.rs  python_comparison.rs  test_lww.rs  test_null_to_value_multicolumn.rs  test_sequential_lww.rs  visualize.rs
llkv-column-map/old.benches/: column_sum_bench.rs  old.ingest_bench.rs  old.read_bench.rs  old.segment_scan_bench.rs  random_probe_bench.rs  scan_rowid_bench.rs
llkv-column-map/old.examples/: metrics_overview.rs  visualize.rs
llkv-column-map/old.tests/: ingestion_tests.rs  io_behavior_tests.rs  iter_bounds_tests.rs  layout_integrity_tests.rs  nulls_delete_tests.rs  rowid_scan_tests.rs  sorting_tests.rs  updates_and_deletes_tests.rs
llkv-column-map/older.tests/: README.md  pager_sync_tests.rs  pagination_tests.rs
llkv-column-map/python_benches/: README.md  main.py  pyproject.toml
llkv-column-map/src/: bloom.rs  bounds.rs  codecs.rs  column_store.rs  constants.rs  error.rs  gather.rs  index.rs  lib.rs  old.bloom.rs  parallel.rs  predicate.rs  serialization.rs  types.rs
llkv-column-map/tests/: common.rs  dot_snapshot_tests.rs  float_scan_tests.rs  gather_multi_tests.rs  gather_rows_policy_tests.rs  graphviz_snapshots.rs  index_persistence_across_reopen_tests.rs  ingestion_tests.rs  integer_scan_tests.rs  io_behavior_tests.rs  iter_bounds_tests.rs  large_table_scan_tests.rs  layout_integratity_tests.rs  layout_integrity_tests.rs  lww_tests.rs  no_index_scan_tests.rs  null_pagination_sorted_variants.rs  null_pagination_tests.rs  null_pagination_unsorted.rs  pager_sync_tests.rs  pagination_strings_tests.rs  pagination_tests.rs  presence_index_tests.rs  pruning_tests.rs  randomized_value_scan_tests.rs  rowid_scan_tests.rs  rowid_scans_tests.rs  scan_builder_integration.rs  scan_builder_tests.rs  sorting_tests.rs  sortkey_numeric_tests.rs  thread_safety_tests.rs  updates_and_deletes_tests.rs  value_sidecar_tests.rs  visitor_smoke_tests.rs
llkv-compute/: Cargo.toml  README.md
llkv-compute/src/: analysis.rs  array.rs  compare.rs  date.rs  eval.rs  fast_numeric.rs  interval.rs  kernels.rs  lib.rs  literal.rs  literal_ops.rs  numeric.rs  program.rs  projection.rs  rowid.rs  rowids.rs  time.rs
llkv-csv/: Cargo.toml  README.md
llkv-csv/examples/: csv_to_table.rs  ingest_and_stream.rs  stream_csv.rs
llkv-csv/src/: csv_export.rs  csv_ingest.rs  inference.rs  lib.rs  reader.rs  writer.rs
llkv-csv/tests/: csv_export_tests.rs  csv_ingest_tests.rs  infer_schema_integration.rs  infer_schema_integration_tests.rs
llkv-data-types/: Cargo.toml
llkv-data-types/benches/: datatype_enum_bench.rs  decode_many_bench.rs  f32x_bench.rs  math_bench.rs  simd_sum_bench.rs
llkv-data-types/drafts/: DECODE-MANY-BENCH-DRAFT.md  REDUCE-UNALIGNED-DRAFT.md
llkv-data-types/python_benches/: pyproject.toml
llkv-data-types/src/: errors.rs  lib.rs
llkv-data-types/tests/: codec_order_tests.rs
llkv-dsl/: Cargo.toml  README-DRAFT.md
llkv-dsl/src/: lib.rs
llkv-dsl/tests/: fluent_interface_tests.rs  transaction_select_tests.rs
llkv-executor/: Cargo.toml  README.md
llkv-executor/src/: expression.rs  ingest.rs  lib.rs  planner.rs  projections.rs  query.rs  query_executor_temp.rs  schema.rs  time_utils.rs  value_coercion.rs
llkv-expr/: Cargo.toml  README.md
llkv-expr/src/: decimal.rs  expr.rs  format.rs  lib.rs  literal.rs  normalization.rs  (+1 more)
llkv-fusion/: Cargo.toml
llkv-join/: Cargo.toml  README.md
llkv-parquet-store/: Cargo.toml  README.md
llkv-perf-monitor/: Cargo.toml
llkv-plan/: Cargo.toml  README.md
llkv-result/: Cargo.toml  README.md
llkv-runtime/: Cargo.toml  README.md
llkv-scan/: Cargo.toml  README.md
llkv-slt-tester/: Cargo.toml  README.md  SLTURL-SUPPORT.md
llkv-sql/: Cargo.toml  README.md  TRANSACTIONS-PLAN-DRAFT.md
llkv-storage/: Cargo.toml  README.md
llkv-table/: Cargo.toml  README.md
llkv-test-utils/: Cargo.toml  README.md
llkv-threading/: Cargo.toml  README.md
llkv-tpc-h/: Cargo.toml  DRAFT-SUMMARY.md  DRAFT.md
llkv-tpch/: .gitignore  Cargo.toml  DRAFT-PERF-PLAN.md  DRAFT-PRE-FINAL.md  DRAFT-QUERY-LEVEL-CONTEXT.md  DRAFT.md  README.md
llkv-transaction/: Cargo.toml  MVCC-IMPLEMENTATION-PLAN.md  README.md
llkv-types/: Cargo.toml  README.md
(+1161 files in other folders)
