[workspace.package]
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
version = "0.3.0-alpha"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jzombie/rust-llkv"
publish = true

[workspace.dependencies]
llkv-aggregate = { path = "./llkv-aggregate", version = "0.3.0-alpha" }
llkv-column-map = { path = "./llkv-column-map", version = "0.3.0-alpha" }
llkv-csv = { path = "./llkv-csv", version = "0.3.0-alpha" }
llkv-executor = { path = "./llkv-executor", version = "0.3.0-alpha" }
llkv-expr = { path = "./llkv-expr", version = "0.3.0-alpha" }
llkv-join = { path = "./llkv-join", version = "0.3.0-alpha" }
llkv-plan = { path = "./llkv-plan", version = "0.3.0-alpha" }
llkv-result = { path = "./llkv-result", version = "0.3.0-alpha" }
llkv-runtime = { path = "./llkv-runtime", version = "0.3.0-alpha" }
llkv-sql = { path = "./llkv-sql", version = "0.3.0-alpha" }
llkv-storage = { path = "./llkv-storage", version = "0.3.0-alpha" }
llkv-table = { path = "./llkv-table", version = "0.3.0-alpha" }
llkv-test-utils = { path = "./llkv-test-utils", version = "0.3.0-alpha" }
llkv-transaction = { path = "./llkv-transaction", version = "0.3.0-alpha" }
simd-r-drive = "0.15.0-alpha"
simd-r-drive-entry-handle = "0.15.0-alpha"

# Vendor crates
arrow = { version = "56.2.0", default-features = false, features = ["prettyprint"] }
arrow-array = { version = "56.2.0", default-features = false }
arrow-ord = { version = "56.2.0", default-features = false }
arrow-schema = { version = "56.2.0", default-features = false }
async-trait = "0.1.89"
bitcode = "0.6.7"
criterion = "0.7.0"
crossbeam-channel = "0.5.15"
libtest-mimic = "0.6"
line-ending = "1.5.1"
modular-bitfield = "0.12.0"
num_enum = "0.7.4"
rand = "0.9.1"
rayon = "1.10.0"
roaring = "0.11.2"
sqlparser = "0.59.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqllogictest = "0.28.4"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }

[workspace]
members = [
    "llkv-aggregate",
    "llkv-column-map",
    "llkv-csv",
    "llkv-runtime",
    "llkv-executor",
    "llkv-expr",
    "llkv-join",
    "llkv-plan",
    "llkv-result",
    "llkv-sql",
    "llkv-storage",
    "llkv-table",
    "llkv-test-utils",
    "llkv-transaction"
]
resolver = "2"
