[package]
name = "llkv-aggregate"
description = "Aggregate computation engine for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, default-features = false }
llkv-column-map.workspace = true
llkv-result.workspace = true
llkv-plan.workspace = true
rustc-hash.workspace = true
