[package]
name = "llkv-arrowhead"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { version = "56.1.0", default-features = false }
arrow-array = "56.1.0"
arrow-buffer = "56.1.0"
arrow-schema = "56.1.0"
llkv-column-map.workspace = true
