[package]
name = "llkv-btree"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crossbeam-channel.workspace = true
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "large_scale_benchmark"
harness = false

[[bench]]
name = "unique_values_benchmark"
harness = false
