[package]
name = "llkv-btree"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crossbeam-channel.workspace = true
line-ending = { workspace = true, optional = true }
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
xxhash-rust.workspace = true

[features]
debug = ["line-ending"]

[dev-dependencies]
criterion.workspace = true
llkv-btree = { workspace = true, features = ["debug"] }

[[bench]]
name = "large_scale_benchmark"
harness = false

[[bench]]
name = "unique_values_benchmark"
harness = false
