[package]
name = "llkv-btree"
description = "Generic, paged B+Tree with batch-only pager I/O for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
crossbeam-channel.workspace = true
line-ending = { workspace = true, optional = true }
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
xxhash-rust.workspace = true

[features]
debug = ["line-ending"]

[dev-dependencies]
criterion.workspace = true
llkv-btree = { path = ".", features = ["debug"] }

[[bench]]
name = "large_scale_benchmark"
harness = false

[[bench]]
name = "unique_values_benchmark"
harness = false
