[package]
name = "llkv-column-map"
description = "Column mapping utilities for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
autobenches = false
keywords = ["database", "columnar", "arrow", "storage", "mapping"]
categories = ["database-implementations", "data-structures"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[dependencies]
arrow.workspace = true
arrow-ord.workspace = true
croaring.workspace = true
llkv-expr.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-threading.workspace = true
llkv-types.workspace = true
num_enum.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle = { workspace = true, features = ["arrow"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
line-ending.workspace = true
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
rand.workspace = true

[[bench]]
name = "column_sum_bench"
harness = false

[[bench]]
name = "gather_rows_bench"
harness = false

[[bench]]
name = "ingest_bench"
harness = false

[[bench]]
name = "random_probe_bench"
harness = false

[[bench]]
name = "scan_builder_bench"
harness = false

[[bench]]
name = "sort_index_bench"
harness = false

# [profile.bench]
# opt-level = 3
# lto = "thin"
# codegen-units = 1
# debug = false

[lints]
workspace = true
