[package]
name = "llkv-compute"
description = "Compute kernels and math operations for LLKV."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-buffer = { workspace = true }
llkv-result = { workspace = true }
llkv-expr = { workspace = true }

[lints]
workspace = true
