[package]
name = "llkv-compute"
description = "Compute kernels and math operations for LLKV."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-buffer = { workspace = true }
llkv-result = { workspace = true }
llkv-expr = { workspace = true }

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true
