[package]
name = "llkv-compute"
description = "Compute kernels and math operations for LLKV."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-buffer = { workspace = true }
croaring.workspace = true
llkv-column-map = { workspace = true }
llkv-expr = { workspace = true }
llkv-result = { workspace = true }
llkv-types = { workspace = true }
time = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
sqlparser = { workspace = true }

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []
