[package]
name = "llkv-csv"
description = "CSV reader and writer for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, default-features = false, features = ["csv", "prettyprint"] }
llkv-table.workspace = true
llkv-column-map.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
simd-r-drive-entry-handle = { workspace = true, features = ["arrow"] }

[dev-dependencies]
tempfile.workspace = true
rand.workspace = true
