[package]
name = "llkv-csv"
description = "CSV reader and writer for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "csv", "arrow", "parser", "import"]
categories = ["database-implementations", "encoding"]
readme = "README.md"

[dependencies]
arrow = { workspace = true, default-features = false, features = ["csv", "prettyprint"] }
llkv-column-map.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
simd-r-drive-entry-handle = { workspace = true, features = ["arrow"] }
tracing.workspace = true

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true
