[package]
name = "llkv-dsl"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, default-features = false }
llkv-column-map.workspace = true
llkv-expr.workspace = true
llkv-plan.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
simd-r-drive-entry-handle.workspace = true
sqlparser.workspace = true
time = { workspace = true, features = ["parsing"] }
tracing.workspace = true
