[package]
name = "llkv-dsl"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
llkv-runtime.workspace = true

[dev-dependencies]
arrow = { workspace = true, default-features = false }
llkv-storage.workspace = true
