[package]
name = "llkv-executor"
description = "Query execution engine for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow = { workspace = true, default-features = false }
llkv-aggregate.workspace = true
llkv-column-map.workspace = true
llkv-expr.workspace = true
llkv-join.workspace = true
llkv-plan.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle.workspace = true
tracing.workspace = true
time.workspace = true

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
