[package]
name = "llkv-executor"
description = "Query execution engine for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "executor", "query", "arrow", "streaming"]
categories = ["database-implementations"]
readme = "README.md"

[dependencies]
arrow = { workspace = true, default-features = false }
arrow-buffer.workspace = true
llkv-aggregate.workspace = true
llkv-column-map.workspace = true
llkv-compute.workspace = true
llkv-expr.workspace = true
llkv-join.workspace = true
llkv-plan.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
llkv-types.workspace = true
rand.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle.workspace = true
tracing.workspace = true
time.workspace = true

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true
