[package]
name = "llkv-expr"
description = "Query expression AST for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
llkv-column-map.workspace = true
