[package]
name = "llkv-expr"
description = "Query expression AST for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "expression", "ast", "sql", "query"]
categories = ["database-implementations", "parser-implementations"]
readme = "README.md"

[dependencies]
arrow.workspace = true
arrow-array.workspace = true
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
