[package]
name = "llkv-fusion"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
async-trait = { workspace = true }
arrow = { workspace = true }
datafusion.workspace = true
datafusion-catalog.workspace = true
datafusion-datasource.workspace = true
llkv-column-map = { workspace = true }
llkv-result = { workspace = true }
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }
llkv-table = { workspace = true }
simd-r-drive-entry-handle = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
