[package]
name = "llkv-join"
description = "Join operators for LLKV tables."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
arrow.workspace = true
llkv-column-map.workspace = true
llkv-expr.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle = { workspace = true, features = ["arrow"] }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }

[[bench]]
name = "join_bench"
harness = false
