[package]
name = "llkv-join"
description = "Table join operators for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "join", "arrow", "sql", "query"]
categories = ["database-implementations", "algorithms"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[dependencies]
arrow.workspace = true
llkv-column-map.workspace = true
llkv-expr.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
llkv-types.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle = { workspace = true, features = ["arrow"] }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
llkv-storage = { workspace = true, features = ["simd-r-drive-support"] }
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[[bench]]
name = "join_bench"
harness = false

[lints]
workspace = true
