[package]
name = "llkv-perf-monitor"
description = "Performance monitoring utilities for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
perf-mon = []

[dependencies]
tracing.workspace = true
line-ending.workspace = true

[dev-dependencies]
indoc.workspace = true
tempfile.workspace = true

[lints]
workspace = true
