[package]
name = "llkv-perf-monitor"
description = "Performance monitoring utilities for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[features]
default = []
perf-mon = []

[dependencies]
line-ending.workspace = true

[dev-dependencies]
indoc.workspace = true
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
tempfile.workspace = true

[lints]
workspace = true
