[package]
name = "llkv-plan"
description = "Query planner for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "planner", "query", "sql", "optimizer"]
categories = ["database-implementations"]
readme = "README.md"

[dependencies]
arrow = { workspace = true, default-features = false }
llkv-expr.workspace = true
llkv-result.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
time.workspace = true

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }
