[package]
name = "llkv-plan"
description = "Query planner for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "planner", "query", "sql", "optimizer"]
categories = ["database-implementations"]
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-datasource = { workspace = true }
llkv-column-map = { workspace = true }
llkv-storage = { workspace = true }
llkv-table = { workspace = true }
llkv-result = { workspace = true }


[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true
