[package]
name = "llkv-plan"
description = "Query planner for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "planner", "query", "sql", "optimizer"]
categories = ["database-implementations"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[dependencies]
arrow = { workspace = true, default-features = false }
llkv-compute.workspace = true
llkv-expr.workspace = true
llkv-result.workspace = true
llkv-types.workspace = true
llkv-scan.workspace = true
llkv-column-map.workspace = true
llkv-storage.workspace = true
simd-r-drive-entry-handle.workspace = true
regex.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true
