[package]
name = "llkv-result"
description = "Result and error types for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "error", "result", "types"]
categories = ["database-implementations"]
readme = "README.md"

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []

[dependencies]
arrow.workspace = true
thiserror.workspace = true

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true
