[package]
name = "llkv-runtime"
description = "Execution runtime for the LLKV toolkit."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
keywords = ["database", "runtime", "execution", "mvcc", "query"]
categories = ["database-implementations"]
readme = "README.md"

[dependencies]
arrow = { workspace = true, default-features = false }
croaring.workspace = true
llkv-column-map.workspace = true
llkv-compute.workspace = true
llkv-executor.workspace = true
llkv-expr.workspace = true
llkv-plan.workspace = true
llkv-result.workspace = true
llkv-storage.workspace = true
llkv-table.workspace = true
llkv-transaction.workspace = true
llkv-types.workspace = true
rustc-hash.workspace = true
simd-r-drive-entry-handle.workspace = true
sqlparser.workspace = true
time = { workspace = true, features = ["parsing"] }
tracing.workspace = true

[dev-dependencies]
llkv-test-utils = { workspace = true, features = ["auto-init"], optional = false }

[lints]
workspace = true

[package.metadata.cargo-udeps.ignore]
# List dependency names to ignore for this package
normal = []
development = ["llkv-test-utils"]
build = []
